# rust-pmem

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  rustfmt.toml  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js  trait.Drop.js
pmem/: errormsg.v.html  fn.check_version.html  fn.drain.html  fn.errormsg.html  fn.flush.html  fn.has_hw_drain.html  fn.is_pmem.html  fn.msync.html  fn.msync_unsized.html  fn.persist.html  has_hw_drain.v.html  index.html  is_pmem.v.html  msync_unsized.v.html  persist.v.html  sidebar-items.js
pmem-blk/: Cargo.toml  README.md
pmem-blk/src/: blkpool.rs  ffi.rs  lib.rs
pmem-blk/tests/: basic.rs
pmem-log/: Cargo.toml  README.md
pmem-log/src/: ffi.rs  lib.rs  log.rs
pmem-log/tests/: basic.rs
pmem-obj/: Cargo.toml  README.md
pmem-obj/src/: ffi.rs  lib.rs  objpool.rs
pmem-obj/tests/: basic.rs
pmem/cell/: PmemCell.t.html  PmemMutCell.t.html  PmemMutRef.t.html  PmemRef.t.html  index.html  sidebar-items.js  struct.PmemCell.html  struct.PmemMutCell.html  struct.PmemMutRef.html  struct.PmemRef.html
pmem/nodrain/: fn.copy.html  fn.copy_nonoverlapping.html  fn.copy_nooverlapping.html  fn.write_bytes.html  index.html  sidebar-items.js
pmem/persistentmap/: PersistentMap.t.html  index.html  sidebar-items.js  struct.PersistentMap.html
pmem/pmap/: index.html  struct.PersistentMap.html
pmem/ptr/: PmemConstPtr.t.html  PmemConstVirtualPtr.t.html  PmemMutPtr.t.html  PmemMutVirtualPtr.t.html  copy_nooverlapping.v.html  fn.copy.html  fn.copy_nonoverlapping.html  fn.copy_nooverlapping.html  fn.msync.html  fn.null.html  fn.null_mut.html  fn.write.html  fn.write_bytes.html  index.html  sidebar-items.js  struct.PmemConstPtr.html  struct.PmemConstVirtualPtr.html  struct.PmemMutPtr.html  struct.PmemMutVirtualPtr.html
pmem_blk/: check_version.v.html  fn.check_version.html  index.html  sidebar-items.js
pmem_blk/blkpool/: BlkPool.t.html  MIN_POOLSIZE.v.html  index.html  sidebar-items.js  static.MIN_POOLSIZE.html  struct.BlkPool.html
pmem_log/: index.html  sidebar-items.js
pmem_log/log/: index.html  struct.Log.html
pmem_obj/: index.html  sidebar-items.js
pmem_obj/objpool/: ObjPool.t.html  index.html  sidebar-items.js  struct.ObjPool.html
pmem_sys/: fn.pmem_check_version.html  fn.pmem_drain.html  fn.pmem_errormsg.html  fn.pmem_flush.html  fn.pmem_has_hw_drain.html  fn.pmem_is_pmem.html  fn.pmem_map_file.html  fn.pmem_memcpy_nodrain.html  fn.pmem_memcpy_persist.html  fn.pmem_memmove_nodrain.html  fn.pmem_memmove_persist.html  fn.pmem_memset_nodrain.html  fn.pmem_memset_persist.html  fn.pmem_msync.html  fn.pmem_persist.html  fn.pmem_unmap.html  index.html  pmem_check_version.v.html  pmem_drain.v.html  pmem_errormsg.v.html  pmem_flush.v.html  pmem_has_hw_drain.v.html  pmem_is_pmem.v.html  pmem_map_file.v.html  pmem_memcpy_nodrain.v.html  pmem_memcpy_persist.v.html  pmem_memmove_nodrain.v.html  pmem_memmove_persist.v.html  pmem_memset_nodrain.v.html  pmem_memset_persist.v.html  pmem_msync.v.html  pmem_persist.v.html  pmem_unmap.v.html  sidebar-items.js
pmemblk_sys/: PMEMBLK_MIN_POOL.v.html  PMEMblkpool.t.html  enum.PMEMblkpool.html  fn.pmemblk_bsize.html  fn.pmemblk_check.html  fn.pmemblk_check_version.html  fn.pmemblk_close.html  fn.pmemblk_create.html  fn.pmemblk_errormsg.html  fn.pmemblk_nblock.html  fn.pmemblk_open.html  fn.pmemblk_read.html  fn.pmemblk_set_error.html  fn.pmemblk_set_zero.html  fn.pmemblk_write.html  index.html  pmemblk_bsize.v.html  pmemblk_check.v.html  pmemblk_check_version.v.html  pmemblk_close.v.html  pmemblk_create.v.html  pmemblk_errormsg.v.html  pmemblk_nblock.v.html  pmemblk_open.v.html  pmemblk_read.v.html  pmemblk_set_error.v.html  pmemblk_set_zero.v.html  pmemblk_write.v.html  sidebar-items.js  static.PMEMBLK_MIN_POOL.html
pmemlog_sys/: PMEMlogpool.t.html  enum.PMEMlogpool.html  fn.pmemlog_append.html  fn.pmemlog_appendv.html  fn.pmemlog_close.html  fn.pmemlog_create.html  fn.pmemlog_nbyte.html  fn.pmemlog_open.html  fn.pmemlog_rewind.html  fn.pmemlog_tell.html  fn.pmemlog_walk.html  index.html  pmemlog_append.v.html  pmemlog_appendv.v.html  pmemlog_close.v.html  pmemlog_create.v.html  pmemlog_nbyte.v.html  pmemlog_open.v.html  pmemlog_rewind.v.html  pmemlog_tell.v.html  pmemlog_walk.v.html  sidebar-items.js
pmemobj_sys/: PMEMobjpool.t.html  enum.PMEMobjpool.html  fn.pmemobj_close.html  fn.pmemobj_create.html  fn.pmemobj_drain.html  fn.pmemobj_errormsg.html  fn.pmemobj_flush.html  fn.pmemobj_memcpy_persist.html  fn.pmemobj_memset_persist.html  fn.pmemobj_open.html  fn.pmemobj_persist.html  index.html  pmemobj_close.v.html  pmemobj_create.v.html  pmemobj_drain.v.html  pmemobj_errormsg.v.html  pmemobj_flush.v.html  pmemobj_memcpy_persist.v.html  pmemobj_memset_persist.v.html  pmemobj_open.v.html  pmemobj_persist.v.html  sidebar-items.js
src/: cell.rs  lib.rs  nodrain.rs  persistentmap.rs  pmap.rs  ptr.rs
src/pmem/src/: cell.rs.html  lib.rs.html  nodrain.rs.html  persistentmap.rs.html  pmap.rs.html  ptr.rs.html
src/pmem_blk/pmem-blk/src/: blkpool.rs.html  ffi.rs.html  lib.rs.html
src/pmem_log/pmem-log/src/: ffi.rs.html  lib.rs.html  log.rs.html
src/pmem_obj/pmem-obj/src/: ffi.rs.html  lib.rs.html  objpool.rs.html
src/pmem_sys/sys/pmem-sys/src/: lib.rs.html
src/pmemblk_sys/sys/pmemblk-sys/src/: lib.rs.html
src/pmemlog_sys/sys/pmemlog-sys/src/: lib.rs.html
src/pmemobj_sys/sys/pmemobj-sys/src/: lib.rs.html
sys/pmem-sys/: Cargo.toml  README.md
sys/pmem-sys/src/: lib.rs
sys/pmemblk-sys/: Cargo.toml  README.md
sys/pmemblk-sys/src/: lib.rs
sys/pmemlog-sys/: Cargo.toml  README.md
sys/pmemlog-sys/src/: lib.rs
sys/pmemobj-sys/: Cargo.toml  README.md
sys/pmemobj-sys/src/: lib.rs
tests/: basic.rs
travis/: configure-cargo.sh  install-pmem.sh
travis/cargo/: config
