[package]
name = "pmem"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["pmem", "persistent", "memory", "nvm"]
description = "Rust bindings for the NVM Library http://pmem.io"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem"
documentation = "https://icorderi.github.io/rust-pmem/index.html"

links = "pmem"
build = "build.rs"

[workspace]
members = [
  "pmem-obj",
  "pmem-log",
]

[dependencies]
libc = "0.2"
