[package]
name = "pmem"
version = "0.0.2"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["libpmem", "pmem", "persistent", "memory", "nvm", "nvml", "ffi",
            "pmemobj", "libpmemobj",
            "pmemlog", "libpmemlog",
            "pmemblk", "libpmemblk",]
description = """
Rust abstractions over the NVM Library http://pmem.io
"""

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem"
documentation = "https://icorderi.github.io/rust-pmem/index.html"

links = "pmem"
build = "build.rs"

[dependencies]
pmem-sys = { path = "sys/pmem-sys", version = "0.0" }
libc = "0.2"

[workspace]
members = [
  "pmem-obj",
  "pmem-log",
  "pmem-blk",
  "sys/pmem-sys",
  "sys/pmemobj-sys",
  "sys/pmemlog-sys",
  "sys/pmemblk-sys",
]
