[package]
name = "pmem-blk"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

description = """
Rust abstractions over `pmemblk-sys`.

Arrays of _pmem-resident_ blocks, all the same size, that are atomically updated.
For example, a program keeping a cache of fixed-size objects in _pmem_ might find this library useful.
"""

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmem-blk/"
documentation = "https://icorderi.github.io/rust-pmem/pmem_blk/"

[dependencies]
pmemblk-sys = { path = "../sys/pmemblk-sys", version = "0.0" }
libc = "0.2"
