[package]
name = "pmem-log"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["pmemlog", "libpmemlog", "pmem", "nvm", "nvml"]
description = """
Rust abstractions over `pmemlog-sys`.

A _pmem-resident_ log file.
"""

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmem-log/"
documentation = "https://icorderi.github.io/rust-pmem/pmem_log/"

[dependencies]
pmemlog-sys = { path = "../sys/pmemlog-sys", version = "0.0" }
libc = "0.2"
