[package]
name = "pmem-obj"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

description = "Rust bindings for the NVM Library http://pmem.io"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem"
documentation = "https://icorderi.github.io/rust-pmem/pmem_obj/"

[dependencies]
pmem = { path = "..", version = "0.0" }
libc = "0.2"
