[package]
name = "pmem-sys"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["libpmem", "pmem", "persistent", "memory", "nvm", "nvml", "ffi"]
description = "FFI bindings to **libpmem**"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmem-sys/"
documentation = "https://icorderi.github.io/rust-pmem/pmem_sys/"

links = "pmem"
build = "build.rs"

[dependencies]
libc = "0.2"
