[package]
name = "pmem-sys"
version = "0.0.3"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["pmemobj", "libpmemobj", "persistent", "nvm", "nvml"]
description = "FFI bindings to **libpmem**"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmem-sys/"
documentation = "https://icorderi.github.io/rust-pmem/pmem_sys/"

links = "pmem"
build = "build.rs"

[dependencies]
libc = "0.2"
