[package]
name = "pmemblk-sys"
version = "0.0.2"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["pmemblk", "libpmemblk", "pmem", "nvm", "nvml"]
description = "FFI bindings to **libpmemblk**"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmemblk-sys/"
documentation = "https://icorderi.github.io/rust-pmem/pmemblk_sys/"

links = "pmemblk"
build = "build.rs"

[dependencies]
libc = "0.2"
