[package]
name = "pmemlog-sys"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["libpmem", "pmem", "persistent", "memory", "nvm", "nvml", "ffi", "pmemlog", "libpmemlog"]
description = "FFI bindings to **libpmemlog**"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmemlog-sys/"
documentation = "https://icorderi.github.io/rust-pmem/pmemlog_sys/"

links = "pmemlog"
build = "build.rs"

[dependencies]
libc = "0.2"
