[package]
name = "pmemobj-sys"
version = "0.0.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
license = "MIT/Apache-2.0"

keywords = ["pmemobj", "libpmemobj", "memory", "nvm", "nvml"]
description = "FFI bindings to **libpmemobj**"

repository = "https://github.com/icorderi/rust-pmem"
homepage = "https://github.com/icorderi/rust-pmem/pmemobj-sys/"
documentation = "https://icorderi.github.io/rust-pmem/pmemobj_sys/"

links = "pmemobj"
build = "build.rs"

[dependencies]
libc = "0.2"
